--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -19,4 +19,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
+          EXCLUDE: "JavaScript,HTML,CSS,GLSL,Astro,Shell,Dockerfile"
           USERNAME: ${{ github.repository_owner }}
+          UTC_OFFSET: 8
